throw last error (direct only)
git-svn-id: https://svn.java.net/svn/jna~svn/branches/direct@878 2f8a963e-d2e4-e7d0-97bf-ccb7fcea9d80

--- a/jnalib/release-notes.html
+++ b/jnalib/release-notes.html
@@ -3,6 +3,7 @@
 <b>Features</b><br>
 <ul>
 <li>Handle String, Structure, Callback, Buffer, and primitive arrays in direct mappings.
+<li>Optionally throw errno/GetLastError as an exception.
 </ul>
 <b>Bug Fixes</b><br>
 <ul>
